--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lucide/astro": "^0.564.0",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.17.1",
+    "fuse.js": "^7.1.0",
     "tailwindcss": "^4.1.18"
   }
 }
